src/parser/SlkAction.java
package parser;

import gestor_de_errores.ErroresSemanticos;
import gestor_de_errores.GestorErrores;
import gestor_de_errores.TErrorSemantico;
import scanner.TipoToken;
import tabla_de_simbolos.TablaSimbolos;
import java.util.ArrayList;
import org.apache.log4j.Logger;

/**
 * Clase que implementa las acciones semanticas.
 * 
 * @author Macrogrupo 1
 */
public class SlkAction {

    // CONSTANTES
    private static final Logger logger = Logger.getLogger(SlkAction.class);

    // ATRIBUTOS
    private TablaSimbolos _tablaSimbolos;
    private GestorErrores _gestorDeErrores;
    private PilaNodos _pilaNodos;

    /**
     * Constructor de la clase SlkAction.
     * 
     * @param tabla Tabla de simbolos del compilador.
     */
    public SlkAction(TablaSimbolos tabla, GestorErrores gestorDeErrores, PilaNodos pilaNodos) {

        _tablaSimbolos = tabla;
        _gestorDeErrores = gestorDeErrores;
        _pilaNodos = pilaNodos;
    }

    /**
     * Metodo invocado por Slk consistente en la bifurcacion hacia el procedimiento
     * que trata la accion semantica correspondiente.
     * 
     * @param number La accion semantica correspondiente.
     */
    public void execute(int number) {

        switch (number) {
            case 1:
                unidadDeCompilacion1();
                break;
            case 2:
                unidadDeCompilacion2();
                break;
            case 3:
                unidadDeCompilacion3();
                break;
            case 4:
                moduloPrograma();
                break;
            case 5:
                activarDeclarativa();
                break;
            case 6:
                cabeceraModulo();
                break;
            case 7:
                CierraAmbito();
                break;
            case 8:
                Declaracion();
                break;
            case 9:
                tipoSimple();
                break;
            case 10:
                tipoSimple2();
                break;
            case 11:
                subrango();
                break;
            case 12:
                listaIdentificadores();
                break;
            case 13:
                vacio();
                break;
            case 14:
                variable();
                break;
            case 15:
                cierravariable();
                break;
            case 16:
                Marca();
                break;
            case 17:
                listaVariables();
                break;
            case 18:
                Begin();
                break;
            case 19:
                SentenciaAsignacion();
                break;
            case 20:
                Identificador();
                break;
            case 21:
                RestoSentenciaAsignacion();
                break;
            case 22:
                RestoSentenciaRestoAsignacion();
                break;
            case 23:
                Expresion();
                break;
            case 24:
                expresionIf();
                break;
            case 25:
                expresionElsIf();
                break;
            case 26:
                SentenciaWHILE();
                break;
            case 27:
                SentenciaREPEAT();
                break;
            case 28:
                SentenciaLOOP();
                break;
            case 29:
                exprFor();
                break;
            case 30:
                exprTo();
                break;
            case 31:
                SentenciaFOR();
                break;
            case 32:
                SentenciaWITH();
                break;
            case 33:
                SentenciaRETURN();
                break;
            case 34:
                ListaDeValores();
                break;
            case 35:
                RestoValores();
                break;
            case 36:
                RestoExpresion();
                break;
            case 37:
                ExpresionSimple();
                break;
            case 38:
                RestoExpresionSimple();
                break;
            case 39:
                termino();
                break;
            case 40:
                unitSuma();
                break;
            case 41:
                unitResta();
                break;
            case 42:
                factor();
                break;
            case 43:
                numero();
                break;
            case 44:
                igual();
                break;
            case 45:
                distinto();
                break;
            case 46:
                distinto2();
                break;
            case 47:
                menor();
                break;
            case 48:
                menorIgual();
                break;
            case 49:
                mayor();
                break;
            case 50:
                mayorIgual();
                break;
            case 51:
                operadorIn();
                break;
            case 52:
                suma();
                break;
            case 53:
                resta();
                break;
            case 54:
                operadorOr();
                break;
            case 55:
                mult();
                break;
            case 56:
                division();
                break;
            case 57:
                divisionEntera();
                break;
            case 58:
                operadorModulo();
                break;
            case 59:
                ampersand();
                break;
            case 60:
                operadorAnd();
                break;
            case 61:
                operadorNot();
                break;
            case 62:
                operadorComplemento();
                break;
            case 63:
                numEntero();
                break;
            case 64:
                numReal();
                break;
            case 65:
                tipoPredefinido();
                break;
            case 66:
                bitset();
                break;
            case 67:
                booleano();
                break;
            case 68:
                cardinal();
                break;
            case 69:
                caracter();
                break;
            case 70:
                entero();
                break;
            case 71:
                longint();
                break;
            case 72:
                longreal();
                break;
            case 73:
                proc();
                break;
            case 74:
                real();
                break;
            case 75:
                verdadero();
                break;
            case 76:
                falso();
                break;
            case 77:
                nil();
                break;
            case 78:
                identificador();
                break;
        }
    }

    private void Begin() {
        if (logger.isDebugEnabled()) {
            logger.debug("Entrando en begin. Encargado de no dejar declarar variables");
        }
        _pilaNodos.desactivarParteDeclarativa();
    }

    private void CierraAmbito() {
        if (logger.isDebugEnabled()) {
            logger.debug("Entrando en cierra Ambito. ");
        }
    }

    private void Declaracion() {

        if (logger.isDebugEnabled()) {
            logger.debug("Entrando en declaracion");
        }
        Nodo nodo = new Nodo();
        nodo.setValor("#");
        _pilaNodos.push(nodo);
    }

    private void Expresion() {
        if (logger.isDebugEnabled()) {
            logger.debug("Entrando en Expresion");
        }
    }

    private void ExpresionSimple() {
        if (logger.isDebugEnabled()) {
            logger.debug("Entrando en ExpresionSimple");
        }
    }

    private void Identificador() {
        if (logger.isDebugEnabled()) {
            logger.debug("Entrando en identificador; \n Suponiendo que esta en la tabla de simbolos");
        }
    }

    private void ListaDeValores() {
        if (logger.isDebugEnabled()) {
            logger.debug("Entrando en listaDeValores");
        }
    }

    private void Marca() {
        if (logger.isDebugEnabled()) {
            logger.debug("Entrando en Marca. Introduciendo marca en la pila para saber el numero de variables que hay");
        }
        Nodo nodo = new Nodo();
        nodo.setValor("#");
        _pilaNodos.push(nodo);
    }

    private void OperadorSumador() {
        if (logger.isDebugEnabled()) {
            logger.debug("Entrando en operadorSumador");
        }
    }

    private void RestoExpresion() {
        if (logger.isDebugEnabled()) {
            logger.debug("Entrando en restoExpresion");
        }
    }

    private void RestoExpresionSimple() {
        if (logger.isDebugEnabled()) {
            logger.debug("Entrando en restoExpresionSimple");
        }

    }

    private void RestoSentenciaAsignacion() {
        if (logger.isDebugEnabled()) {
            logger.debug("Entrando en restoSentenciaAsignacion");
        }
    }

    private void RestoSentenciaRestoAsignacion() {
        if (logger.isDebugEnabled()) {
            logger.debug("Entrando en restoSentenciRestoaAsignacion");
        }
    }

    private void RestoValores() {
        if (logger.isDebugEnabled()) {
            logger.debug("Entrando en RestoValores");
        }
    }

    private void SentenciaAsignacion() {
        if (logger.isDebugEnabled()) {
            logger.debug("Entrando en sentencia asignacion");
        }

        Nodo type = _pilaNodos.pop();

        if (!type.getValor().equals(PLGConstants.ERROR)) {

            Nodo var = _pilaNodos.pop();

            if (!var.getValor().equals(PLGConstants.ERROR)) {
                if (_tablaSimbolos.esta(var.getValor())) {
                    //COMPROBAR CON LOS OTROS TIPOS QUE HAY
                    //comprobamos si es identificador
                    if (((TipoToken) type.getTipos().get(0)).compareTo(TipoToken.valueOf("IDENTIFICADOR")) == 0) {
                        if (_tablaSimbolos.esta(type.getValor())) {
                            if (!_tablaSimbolos.sonConpatiblesIdentificadores(var.getValor(), type.getValor())) {

                                _gestorDeErrores.insertaErrorSemantico(new TErrorSemantico(
                                ErroresSemanticos.ERROR_SEMANTICO_TIPOS_NO_COMPATIBLES,
                                "Tipos no compatibles",
                                var.getLinea(),
                                var.getColumna()));
                                //logger.error("Tipos no compatibles");
                            }
                        } else {

                            _gestorDeErrores.insertaErrorSemantico(new TErrorSemantico(
                                ErroresSemanticos.ERROR_SEMANTICO_VARIABLE_NO_DECLARADA,
                                "variable " + type.getValor() + " no declarada",
                                type.getLinea(),
                                type.getColumna()));
                            //logger.error("variable " + type.getValor() + " no declarada");
                        }
                    } else {
                        if (((TipoToken) type.getTipos().get(0)).compareTo(TipoToken.valueOf("NUMERO_ENTERO")) == 0) {
                            if (!_tablaSimbolos.sonConpatibles(var.getValor(), ((TipoToken) type.getTipos().get(0)))) {
                                
                                _gestorDeErrores.insertaErrorSemantico(new TErrorSemantico(
                                ErroresSemanticos.ERROR_SEMANTICO_TIPOS_NO_COMPATIBLES,
                                "Tipos no compatibles",
                                type.getLinea(),
                                type.getColumna()));
                                //logger.error("Tipos no compatibles");
                            }
                        } else if (((TipoToken) type.getTipos().get(0)).compareTo(TipoToken.valueOf("NUMERO_REAL")) == 0) {
                            if (!_tablaSimbolos.sonConpatibles(var.getValor(), ((TipoToken) type.getTipos().get(0)))) {

                                _gestorDeErrores.insertaErrorSemantico(new TErrorSemantico(
                                ErroresSemanticos.ERROR_SEMANTICO_TIPOS_NO_COMPATIBLES,
                                "Tipos no compatibles",
                                type.getLinea(),
                                type.getColumna()));
                                //logger.error("Tipos no compatibles");
                            }
                        } else if (((TipoToken) type.getTipos().get(0)).compareTo(TipoToken.valueOf("PALABRA_RESERVADA")) == 0) {
                            if (!_tablaSimbolos.sonConpatibles(var.getValor(), ((TipoToken) type.getTipos().get(0)))) {

                                _gestorDeErrores.insertaErrorSemantico(new TErrorSemantico(
                                ErroresSemanticos.ERROR_SEMANTICO_TIPOS_NO_COMPATIBLES,
                                "Tipos no compatibles",
                                type.getLinea(),
                                type.getColumna()));
                                //logger.error("Tipos no compatibles");
                            }
                        } else {

                            _gestorDeErrores.insertaErrorSemantico(new TErrorSemantico(
                                ErroresSemanticos.ERROR_SEMANTICO_TIPO_INDEFINIDO,
                                "Tipo indefinido",
                                type.getLinea(),
                                type.getColumna()));
                            //logger.error("Tipo indefinido");
                        }
                    }
                } else {

                    _gestorDeErrores.insertaErrorSemantico(new TErrorSemantico(
                                ErroresSemanticos.ERROR_SEMANTICO_VARIABLE_NO_DECLARADA,
                                "variable " + var.getValor() + " no declarada",
                                var.getLinea(),
                                var.getColumna()));
                    //logger.error("variable " + var.getValor() + " no declarada");
                }

            } else {
                insertarNodoError();
                logger.error("Introduciendo el tipo ERROR en sentencia asignacion");
            }
        } else {
            insertarNodoError();
            logger.error("Introduciendo el tipo ERROR en sentencia asignacion");
        }
    }

    private void SentenciaFOR() {
        if (logger.isDebugEnabled()) {
            logger.debug("Entrando en SentenciaFor");
        }
    }

    private void SentenciaLOOP() {
        if (logger.isDebugEnabled()) {
            logger.debug("Entrando en SentenciaLOOP");
        }
    }

    private void SentenciaREPEAT() {
        if (logger.isDebugEnabled()) {
            logger.debug("Entrando en SentenciaRepeat");
        }
    }

    private void SentenciaRETURN() {
        if (logger.isDebugEnabled()) {
            logger.debug("Entrando en SentenciaRETURN");
        }
    }

    private void SentenciaWHILE() {

        //Creo el nodo error previamente
        Nodo error = new Nodo();
        error.setTipo(null);
        error.setValor(PLGConstants.ERROR);

        System.out.println("---SentenciaWHILE---");
        if (logger.isDebugEnabled()) {
            logger.debug("Entrando en SentenciaWHILE");
        }
        
        Nodo nodo = _pilaNodos.pop();
        
        //Miramos si el nodo que acabamos de sacar de la pila es un error
        if (nodo.getValor().equals(PLGConstants.ERROR) == false) {
            //Comprobamos si el tipo del nodo es una palabra reservada
            if (((TipoToken) nodo.getTipos().get(0)).compareTo(TipoToken.valueOf("PALABRA_RESERVADA")) == 0) {
                //Comprobado en las acciones semanticas de expresiones
                logger.debug("Tipo booleano encontrado correctamente1");
            } else if (((TipoToken) nodo.getTipos().get(0)).compareTo(TipoToken.valueOf("IDENTIFICADOR")) == 0) {
                if (_tablaSimbolos.esta(nodo.getValor())) {

                    TipoToken aux = (TipoToken) _tablaSimbolos.dameTipoIdentificador(nodo.getValor()).get(0);

                    if (aux.compareTo(TipoToken.valueOf("PALABRA_RESERVADA")) == 0) {
                        // El identificador es booleano
                        logger.debug("Tipo booleano encontrado correctamente2");
                    } 
                    else {

                        _pilaNodos.push(error);
                        //logger.error("Identificador no booleano");

                        _gestorDeErrores.insertaErrorSemantico(new TErrorSemantico(
                                ErroresSemanticos.ERROR_SEMANTICO_TIPO_NO_BOOLEANO,
                                "Tipo no booleano",
                                nodo.getLinea(),
                                nodo.getColumna()));
                    }
                } else {
                    _pilaNodos.push(error);
                    _gestorDeErrores.insertaErrorSemantico(new TErrorSemantico(
                                ErroresSemanticos.ERROR_SEMANTICO_VARIABLE_NO_DECLARADA,
                                "Variable no declarada",
                                nodo.getLinea(),
                                nodo.getColumna()));
                    //logger.error("Variable no declarada");
                }
            } else {
                _pilaNodos.push(error);
                _gestorDeErrores.insertaErrorSemantico(new TErrorSemantico(
                                ErroresSemanticos.ERROR_SEMANTICO_TIPO_NO_COMPATIBLE,
                                "Tipo no compatible",
                                nodo.getLinea(),
                                nodo.getColumna()));
               // logger.error("Tipo no compatible");
            }
        } else {//Como el nodo sacado era un error, propagamos el error
            _pilaNodos.push(error);
            logger.error("Se encontro un nodo error en la pila. Se propagara el error.");
        }
    }

    private void SentenciaWITH() {
        System.out.println("---SentenciaWITH---");
    }

    private void Signo() {
        if (logger.isDebugEnabled()) {
            logger.debug("Entrando en signo");
        }
    }

    private void activarDeclarativa() {
        if (logger.isDebugEnabled()) {
            logger.debug("Entrando en activarDeclarativa");
        }
        _pilaNodos.activarParteDeclarativa();
    }

    private void ampersand() {
        if (logger.isDebugEnabled()) {
            logger.debug("Entrando en ampersand. Redirigiendo a operadorAnd()");
        }
        operadorAnd();
    }

    private void bitset() {
        if (logger.isDebugEnabled()) {
            logger.debug("Entrando en bitset");
        }
    // Modificar tabla de símbolos
    }

    private void booleano() {
        if (logger.isDebugEnabled()) {
            logger.debug("Entrando en booleano");
        }
    // Modificar tabla de símbolos
    }

    private void cabeceraModulo() {
        if (logger.isDebugEnabled()) {
            logger.debug("Entrando en cabeceraModulo");
        }

        // Comprobamos que el nombre del módulo no esté
        // en la tabla de símbolos

        Nodo nodo = _pilaNodos.pop();
        if (_tablaSimbolos.getContinente() != null || _tablaSimbolos.getModPadre() != null) {
            if (_tablaSimbolos.getNombre().equals(nodo.getValor())) {
                
                insertarNodoError();
                logger.error("Introducido nodo ERROR");
            }
            else {
                // TODO: Hay que abrir ámbito
                _tablaSimbolos.insertarModulo(nodo.getValor());
            }
        } else {
            // Tabla principal
            _tablaSimbolos.setNombre(nodo.getValor());
        }
    }

    private void caracter() {
        if (logger.isDebugEnabled()) {
            logger.debug("Entrando en caracter");
        }
    // Modificar tabla de símbolos
    }

    private void cardinal() {
        if (logger.isDebugEnabled()) {
            logger.debug("Entrando en cardinal");
        }
    // Modificar tabla de símbolos
    }

    private void cierravariable() {
        if (logger.isDebugEnabled()) {
            logger.debug("Entrando en cierravariable");
        }
        _pilaNodos.pop();
    }

    private void distinto() {
        if (logger.isDebugEnabled()) {
            logger.debug("Entrando en distinto");
        }
    }

    private void distinto2() {
        if (logger.isDebugEnabled()) {
            logger.debug("Entrando en distinto2");
        }
    }

    private void division() {
        if (logger.isDebugEnabled()) {
            logger.debug("Entrando en division");
        }
    }

    private void exprFor() {
        if (logger.isDebugEnabled()) {
            logger.debug("Entrando en for");
        }
        Nodo nodo1 = _pilaNodos.pop();
        //_pilaNodos.pop();
        Nodo nodo2 = _pilaNodos.pop();
        if (((TipoToken) nodo1.getTipos().get(0)).compareTo(TipoToken.valueOf("NUMERO_ENTERO")) == 0) {
            if (_tablaSimbolos.esta(nodo2.getValor())) {
                TipoToken aux = (TipoToken) _tablaSimbolos.dameTipoIdentificador(nodo2.getValor()).get(0);

                if (aux.compareTo(TipoToken.valueOf("NUMERO_ENTERO")) == 0) {                    // El identificador es booleano
                } else {
                    // Identificador no booleano
                    insertarNodoError();
                    logger.error("No entero en FOR");
                }
            } else {
                
                insertarNodoError();
                logger.error("La expresión no es entera");
            }

        } else if (((TipoToken) nodo1.getTipos().get(0)).compareTo(TipoToken.valueOf("IDENTIFICADOR")) == 0) {
            if (_tablaSimbolos.esta(nodo2.getValor())) {
                ArrayList tiposVar = _tablaSimbolos.dameTipoIdentificador(nodo2.getValor());
                TipoToken tipoVar = (TipoToken) tiposVar.get(0);
                if (tipoVar.compareTo(TipoToken.valueOf("NUMERO_ENTERO")) != 0) {

                    _gestorDeErrores.insertaErrorSemantico(new TErrorSemantico(
                                ErroresSemanticos.ERROR_SEMANTICO_TIPO_NO_COMPATIBLE,
                                "El tipo de la variable para el limite inferior del for no es del tipo esperado",
                                nodo2.getLinea(),
                                nodo2.getColumna()));
                    //logger.error("El tipo de la variable para el limite inferior del for no es del tipo esperado");
                    insertarNodoError();
                    logger.error("La expresión no es entera");
                }
            } else {

                _gestorDeErrores.insertaErrorSemantico(new TErrorSemantico(
                                ErroresSemanticos.ERROR_SEMANTICO_VARIABLE_NO_DECLARADA,
                                "La variable " + nodo2.getValor() + " no ha sido declarada",
                                nodo2.getLinea(),
                                nodo2.getColumna()));
                logger.error("La variable " + nodo2.getValor() + " no ha sido declarada");
                insertarNodoError();
                logger.error("La expresión no es entera");
            }
        } else {
            _gestorDeErrores.insertaErrorSemantico(new TErrorSemantico(
                                ErroresSemanticos.ERROR_SEMANTICO_TIPO_NO_COMPATIBLE,
                                "El tipo de la variable para el limite inferior del for no es del tipo esperado",
                                nodo2.getLinea(),
                                nodo2.getColumna()));
            //logger.error("El tipo de la variable para el limite inferior del for no es del tipo esperado");
            insertarNodoError();
            logger.error("La expresión no es entera");
        }
    }

    private void exprTo() {
        if (logger.isDebugEnabled()) {
            logger.debug("Entrando en expresionTO");
        }
        Nodo nodo = _pilaNodos.pop();
        if (((TipoToken) nodo.getTipos().get(0)).compareTo(TipoToken.valueOf("NUMERO_ENTERO")) == 0) {
            //El límite del FOR es entero
        } else if (((TipoToken) nodo.getTipos().get(0)).compareTo(TipoToken.valueOf("IDENTIFICADOR")) == 0) {
            ArrayList tipos = _tablaSimbolos.dameTipoIdentificador(nodo.getValor());
            TipoToken tipoVar = (TipoToken) tipos.get(0);
            if (tipoVar.compareTo(TipoToken.valueOf("NUMERO_ENTERO")) != 0) {

                _gestorDeErrores.insertaErrorSemantico(new TErrorSemantico(
                                ErroresSemanticos.ERROR_SEMANTICO_TIPO_NO_COMPATIBLE,
                                "Tipo no compatible como limite del for",
                                nodo.getLinea(),
                                nodo.getColumna()));
                //logger.error("Tipo no compatible como limite del for");
                
                insertarNodoError();
                logger.error("La expresión no es entera");
            }

        } else {

            insertarNodoError();
            logger.error("El límite del FOR no es entero");
        }
    }

    private void expresionElsIf() {
        if (logger.isDebugEnabled()) {
            logger.debug("Entrando en expresionElsif");
        }
        // TODO: Generación de código intermedio
        expresionIf();
    }

    private void expresionIf() {

        if (logger.isDebugEnabled()) {
            logger.debug("Entrando en expresionIf");
        }

        // Caso 1: Identificador
        Nodo nodo = _pilaNodos.pop();

        if (!nodo.getValor().equals(PLGConstants.ERROR)) {
            if (((TipoToken) nodo.getTipos().get(0)).compareTo(TipoToken.valueOf("IDENTIFICADOR")) == 0) {
                if (_tablaSimbolos.esta(nodo.getValor())) {
                    TipoToken aux = (TipoToken) _tablaSimbolos.dameTipoIdentificador(nodo.getValor()).get(0);

                    if (aux.compareTo(TipoToken.valueOf("PALABRA_RESERVADA")) == 0) {
                        // El identificador es booleano
                        logger.debug("Tipo booleano encontrado correctamente");
                    } else {

                        // Identificador no booleano
                        insertarNodoError();
                        
                        // logger.error("Identificador no booleano");
                        _gestorDeErrores.insertaErrorSemantico(new TErrorSemantico(
                                ErroresSemanticos.ERROR_SEMANTICO_TIPO_NO_BOOLEANO,
                                "Tipo no booleano",
                                nodo.getLinea(),
                                nodo.getColumna()));
                    }
                } else {
